User login is now optional and set via properties

--- a/src/main/resources/props/default.props
+++ b/src/main/resources/props/default.props
@@ -1,2 +1,5 @@
 pool.account.profile=<put address/id here>
 blockchain.info.address=<put address here> 
+require.user.login=<true => require login | false => no hidden values >
+login.user.name=<put login a user name here>
+login.user.pw=<put login password here>
